--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -1,15 +1,33 @@
+/* AuthNav.module.css */
+
 .authNav {
-    display: flex;
-    gap: 10px;
-  }
-  
-  .link {
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-  }
-  
-  .link:hover {
-    text-decoration: underline;
-  }
-  
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.link {
+  text-decoration: none;
+  font-size: 36px;
+  font-weight: 500;
+  color: #7dbbfd;
+  background-color: #0056b3;
+  border: 1px solid transparent;
+  padding: 8px 16px;
+  border-radius: 6px;
+  transition: background-color 0.3s, color 0.3s, border 0.3s;
+  gap: 20px;
+}
+
+.link:hover {
+  background-color: #007bff;
+  color: white;
+  border-color: #007bff;
+}
+
+.link.active {
+  background-color: #0056b3;
+  color: white;
+  border-color: #0056b3;
+}
