--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -1,25 +1,35 @@
+/* UserMenu.module.css */
+
 .userMenu {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
-  
-  .username {
-    color: white;
-    font-weight: bold;
-  }
-  
-  .button {
-    padding: 5px 10px;
-    border: none;
-    background-color: #ff6b6b;
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 5px;
-  }
-  
-  .button:hover {
-    background-color: #ff4c4c;
-  }
-  
+  display: flex;
+  justify-content: flex-end;
+  /* içerik sağa kayar */
+  align-items: center;
+  gap: 16px;
+  padding: 16px 24px;
+  margin-right: 175px;
+}
+
+.username {
+  font-size: 35px;
+  /* harf boyutunu büyüttük */
+  font-weight: 600;
+  color: #333;
+}
+
+.button {
+  padding: 8px 16px;
+  font-size: 16px;
+  border: 1px solid #007bff;
+  background-color: white;
+  color: #007bff;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+  margin-bottom: 10px;
+}
+
+.button:hover {
+  background-color: #007bff;
+  color: white;
+}
