--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  margin-left: 20px;
 }
 
 h1 {
@@ -88,6 +89,7 @@ div {
   min-width: 500px;
   margin-top: 5px;
   margin-bottom: 20px;
+  color: #242424;
 }
 
 input, button {
