--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -31,3 +31,18 @@
   color: white;
   border-color: #0056b3;
 }
+
+@media (max-width: 768px) {
+  .authNav {
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 10px;
+    align-items: center;
+  }
+
+  .link {
+    font-size: 20px;
+    padding: 6px 12px;
+  }
+}
+
