--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -34,3 +34,19 @@
     background-color: #0056b3;
     color: white;
 }
+
+@media (max-width: 768px) {
+    .nav {
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+        font-size: 20px;
+        width: 100%;
+        padding-right: 0;
+    }
+
+    .link {
+        font-size: 18px;
+    }
+}
+
